--- a/src/app/parameters/sections/sections.component.html
+++ b/src/app/parameters/sections/sections.component.html
@@ -1,34 +1,29 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="selectedSection">
     <div class="row">
-        <div class="container">
+        <div class="container parameter-container w-100">
             <h4>{{selectedSection.name}}</h4>
             <p>{{selectedSection.description}}</p>
            
             <div class="row mt-1 d-flex justify-content-center">
-                <nav aria-label="Page navigation example">
-                    <!-- <ul class="pagination pagination-m">
-                        <li class="page-item" *ngFor="let parameter of selectedSection.parameters">
-                            <a class="page-link"
-                                (click)="loadParameter(parameter)"> {{parameter.name}}</a></li>
-                    </ul> -->
-
+                <nav aria-label="Page navigation example">              
                     <div *ngFor="let parameter of selectedSection.parameters" class="btn m-3" 
                     [ngClass]="{
                         'btn-outline-secondary': parameter.completed == false,
-                        'btn-success': parameter.completed 
+                        'btn-success': parameter.completed && parameter.parameterGrade >= 2.33,
+                        'btn-warning': parameter.completed && (parameter.parameterGrade >= 1.33 &&  2.33 > parameter.parameterGrade),
+                        'btn-danger': parameter.completed && (parameter.parameterGrade <= 1.33)
                       }" >
-                        <a class="" (click)="loadParameter(parameter)"> {{parameter.name}}</a>
+                        <a class="" (click)="loadParameter(parameter)"> {{parameter.name}} {{parameter.parameterGrade}}</a>
                     </div>
                 </nav>
             </div>
 
-            <div class="row">
-                <app-questions></app-questions>
-            </div>
-            <div class="form-group" *ngIf="selectedSection">
-                <label for="exampleInputEmail1">Notas:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>         
-            </div>
+            <div class="row " >
+                <div class="container">
+                    <app-questions></app-questions>
+                </div>
+                
+            </div>        
         </div>
     </div>
 </div>
