--- a/src/app/parameters/main/main.component.html
+++ b/src/app/parameters/main/main.component.html
@@ -15,16 +15,16 @@
             <h2 class="text-center w-100 mb-3">BMS</h2>            
         </div>
         <div class="row">
-            <!-- <div class="col-md-3">
+            <div class="col-md-3">
                 <button class="btn btn-success mt-3" (click)="startEmpty()">Iniciar cuestionario</button>
-            </div> -->
+            </div>
             <div class="col-md-3">
                 <button class="btn btn-primary mt-3" (click)="continueForm()">Retomar cuestionario</button>
             </div>
                 
             
         </div>
-        <app-form *ngIf="showForm" [formData]="bmsData"></app-form>
+        <!-- <app-form *ngIf="showForm" [formData]="bmsData"></app-form> -->
        </div>
     </div>
 </div>
