--- a/src/app/parameters/informe/informe.component.html
+++ b/src/app/parameters/informe/informe.component.html
@@ -20,11 +20,11 @@
                     <p><strong>Notas: </strong> {{parameter.notes}}</p>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="text-center w-100 p-5">
                     <button class="btn btn-primary" (click)="goSections()">Ir a las secciones</button>
                 </div>
-            </div>        
+            </div>         -->
         </div>
     </div>
 </div>
