--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -187,7 +187,7 @@ iframe {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: #57b846;
+  background-color: #194f6e;
   padding-top: 50px;
   padding-bottom: 39px;
 }
@@ -273,7 +273,7 @@ iframe {
   padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #194f6e;
   border-radius: 25px;
 
   font-family: Ubuntu-Bold;
