--- a/src/app/parameters/form/form.component.html
+++ b/src/app/parameters/form/form.component.html
@@ -21,7 +21,7 @@
                </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Correo electónico</label>
+                        <label for="exampleFormControlInput1">Correo electrónico</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" [(ngModel)]="mainForm.email">
                     </div>
                 </div>
