--- a/src/app/parameters/sections/sections.component.html
+++ b/src/app/parameters/sections/sections.component.html
@@ -2,6 +2,9 @@
 
 <div class="container-fluid nav-fix">
     <div class="row pt-4  w-100">
+        <div class="col-12 text-center">
+            <h4>Evaluación de: {{ this.mainForm.companyName }}</h4>
+        </div>
      <div class="container d-flex justify-content-center">
         <nav aria-label="Page navigation example">
             <!-- <div class="btn m-2 btn-outline-secondary">
