--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -13,6 +13,11 @@
   src: url('fonts/JosefinSans/JosefinSans-Bold.ttf'); 
 }
 
+
+.auth-container {
+  margin-top: 40px;
+}
+
 a {
 	font-family: Ubuntu-Regular;
 	font-size: 14px;
