--- a/src/app/parameters/questionaries/questionaries.component.html
+++ b/src/app/parameters/questionaries/questionaries.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid nav-fix">
+<div class="container-fluid">
     <div class="row">
         <div class="container mt-4">
             <h4>Cuestionarios en proceso</h4>
@@ -9,6 +9,9 @@
                 <p></p>
             </div>
             <div class="row">
+                <div class="col-12 mb-3 justify-content-end text-right">
+                    <button class="btn btn-success" (click)="createNew()">Crear nuevo cuestionario</button>
+                </div>
                 <div class="col-12">                    
                     <table class="table">
                         <thead>
