--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
           </li>
       
       </ul>           
-      <ul class="navbar-nav my-2 my-lg-0">
+      <!-- <ul class="navbar-nav my-2 my-lg-0">
       
         <li class="nav-item">
           <a class="nav-link" (click)="navigate('general')">Datos Generales <span class="sr-only">(current)</span></a>
@@ -27,7 +27,7 @@
           </li>         
         </ul>
         <button class="btn btn-success my-2 my-sm-0 ml-1" (click)="saveData()"><strong>Guardar Avance</strong></button>
-        <button class="btn btn-warning my-2 my-sm-0 ml-1" (click)="navigate('informe')" [disabled]="!canGenerateReport"><strong>Generar Informe</strong></button>
+        <button class="btn btn-warning my-2 my-sm-0 ml-1" (click)="navigate('informe')" [disabled]="!canGenerateReport"><strong>Generar Informe</strong></button> -->
      
     </div>
   </nav>
