--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="limiter">
+<!-- <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
             <form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
@@ -16,14 +16,7 @@
                     <span class="focus-input100"></span>
                 </div>
 
-                <div class="text-right p-t-13 p-b-23">
-                    <!-- <span class="txt1">
-                        Forgot
-                    </span>
-
-                    <a href="#" class="txt2">
-                        Username / Password?
-                    </a> -->
+                <div class="text-right p-t-13 p-b-23">             
                 </div>
 
                 <div class="container-login100-form-btn">
@@ -43,4 +36,7 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
+
+
+<div id="firebaseUI" class="auth-container"></div>
