--- a/src/app/parameters/form/form.component.html
+++ b/src/app/parameters/form/form.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div class="container h-100 nav-fix ">
+<app-report-nav *ngIf="mainForm.createdForm"></app-report-nav>
+<div class="container h-75 nav-fix ">
     <div class="row h-100 justify-content-center align-items-center" *ngIf="!aceptUseConditions">
         <div class="container mt-4 terms">
             <h3>Condiciones de uso</h3>
@@ -81,7 +82,8 @@
             </div>
             <div class="row">
                 <div class="text-center w-100">
-                    <button class="btn btn-primary" (click)="goSections()">Ir a los parámetros</button>
+                    <button class="btn btn-success" (click)="save()">Guardar</button>
+                    <button class="btn btn-primary ml-2" (click)="goSections()">Ir a los parámetros</button>
                 </div>
             </div>        
         </div>
