--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../../../BMS/bms/node_modules/firebaseui/dist/firebaseui.css";
+
 body,html{
     height:100%;
+}
+
+.nav-fix {
+    margin-top: -60px;
+
 }
