--- a/src/app/ayuda/ayuda.component.html
+++ b/src/app/ayuda/ayuda.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<div class="container-fluid nav-fix">
+<div class="container-fluid mt-3 nav-fix">
     <div class="row">
-        <div class="container mt-4">
+        <div class="container mt-3">
             <h4>Ayuda</h4>
         <hr>
         </div>
