--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="limiter">
+<div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
             <form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
@@ -36,7 +36,7 @@
             </form>
         </div>
     </div>
-</div> -->
+</div>
 
 
-<div id="firebaseUI" class="auth-container"></div>
+<!-- <div id="firebaseUI" class="auth-container"></div> -->
